--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "license": "MIT",
   "dependencies": {
     "form-data": "^2.3.3",
-    "modules": "github:jobscale/core"
+    "core": "github:jobscale/core"
   }
 }
