--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "slack",
-  "version": "1.0.0",
+  "name": "@jobscale/slack",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test:all": "jest --coverage --collectCoverage",
+    "test": "npm run lint && jest --coverage"
   },
-  "keywords": [],
-  "author": "jobscale <jobscale@jsx.jp>",
-  "license": "MIT",
+  "author": "jobscale <jobscale@users.noreply.github.com>",
   "dependencies": {
-    "form-data": "^2.3.3",
-    "core": "github:jobscale/core"
-  }
+    "@jobscale/core": "0.0.3",
+    "@slack/bolt": "^3.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.4.0",
+    "jest": "^27.0.6"
+  },
+  "license": "MIT"
 }
