--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jobscale/slack",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "@jobscale/slack",
   "keywords": [
     "slack"
@@ -9,6 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/jobscale/slack.git"
   },
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
@@ -20,15 +21,14 @@
   ],
   "dependencies": {
     "@jobscale/core": "^0.0.18",
-    "@slack/bolt": "^3.12.0"
+    "@slack/bolt": "^3.12.1"
   },
   "devDependencies": {
-    "eslint": "^8.20.0",
+    "eslint": "^8.26.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.6.0",
-    "jest": "^28.1.3",
+    "eslint-plugin-jest": "^27.1.3",
+    "jest": "^29.2.2",
     "pre-commit": "^1.2.2"
-  },
-  "license": "MIT"
+  }
 }
