--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jobscale/slack",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "@jobscale/slack",
   "keywords": [
     "slack"
@@ -13,22 +13,23 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint && jest --runInBand --coverage --collectCoverage"
+    "test": "jest --runInBand --coverage --collectCoverage"
   },
   "author": "jobscale <jobscale@users.noreply.github.com>",
   "pre-commit": [
     "test"
   ],
   "dependencies": {
-    "@jobscale/core": "^0.0.18",
-    "@slack/bolt": "^3.12.1"
+    "@jobscale/fetch": "^0.0.3",
+    "@jobscale/logger": "^0.1.0",
+    "@slack/bolt": "^3.12.2"
   },
   "devDependencies": {
-    "eslint": "^8.26.0",
+    "eslint": "^8.30.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.3",
-    "jest": "^29.2.2",
+    "eslint-plugin-jest": "^27.1.7",
+    "jest": "^29.3.1",
     "pre-commit": "^1.2.2"
   }
 }
