--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+git@github.com:jobscale/slack.git"
+    "url": "git+https://github.com/jobscale/slack.git"
   },
   "license": "MIT",
   "main": "index.js",
