--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,9 +1,11 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Nodejs CI
 
 on:
+  # schedule:
+  # - cron: '52 17 * * 1'
   push:
     branches: [ main ]
   pull_request:
@@ -16,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [18.x, 20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -31,4 +33,4 @@ jobs:
         rm -fr node_modules package-lock.json
         npm i
         touch test/env.json
-        npm run lint
+        npm run lint --if-present
