--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "author": "jobscale <jobscale@users.noreply.github.com>",
   "license": "MIT",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint",
     "test": "jest --runInBand --coverage --collectCoverage"
   },
   "pre-commit": [
@@ -21,15 +22,13 @@
     "test"
   ],
   "dependencies": {
-    "@jobscale/logger": "^0.6.0",
-    "@slack/bolt": "^3.22.0"
+    "@jobscale/logger": "^0.10.1",
+    "@slack/bolt": "^4.6.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jest": "^28.8.3",
-    "jest": "^29.7.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-jest": "^29.2.1",
+    "jest": "^30.2.0",
     "pre-commit": "^1.2.2"
   }
 }
