--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jobscale/slack",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "@jobscale/slack",
   "keywords": [
     "slack"
@@ -14,8 +14,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "pretest": "date -Iseconds",
     "lint": "eslint",
-    "test": "date -Iseconds && node --experimental-vm-modules node_modules/.bin/jest --detectOpenHandles --runInBand --coverage --collectCoverage"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand --coverage --collectCoverage"
   },
   "pre-commit": "test",
   "dependencies": {
@@ -23,7 +24,7 @@
     "@slack/bolt": "^4.6.0"
   },
   "devDependencies": {
-    "@jobscale/eslint-plugin-standard": "^0.0.7",
+    "@jobscale/eslint-plugin-standard": "^0.0.8",
     "eslint": "^9.39.1",
     "eslint-plugin-jest": "^29.2.1",
     "jest": "^30.2.0",
